--- a/index.html
+++ b/index.html
@@ -11,7 +11,36 @@
     <div class="mainbody">
         <div class="calculator">
             <div class="output">
-                <input type="text" class="screen">
+                <input type="text" id="screen">
+            </div>
+            <div class="button">
+                <div class="row">
+                    <button onClick="btnclick(7)" class="btn">7</button>
+                    <button onClick="btnclick(8)" class="btn">8</button>
+                    <button onClick="btnclick(9)" class="btn">9</button>
+                    <button onClick="btnclick('/')" class="btn">/</button>
+                </div>
+                <div class="row">
+                    <button onClick="btnclick(4)" class="btn">4</button>
+                    <button onClick="btnclick(5)" class="btn">5</button>
+                    <button onClick="btnclick(6)" class="btn">6</button>
+                    <button onClick="btnclick('*')" class="btn">X</button>
+                </div>
+                <div class="row">
+                    <button onClick="btnclick(1)" class="btn">1</button>
+                    <button onClick="btnclick(2)" class="btn">2</button>
+                    <button onClick="btnclick(3)" class="btn">3</button>
+                    <button onClick="btnclick('-')" class="btn">-</button>
+                </div>
+                <div class="row">
+                    <button onClick="btnclick('.')" class="btn">.</button>
+                    <button onClick="btnclick(0)" class="btn">0</button>
+                    <button onClick="equalClick()" class="btn">=</button>
+                    <button onClick="btnclick('+')" class="btn">+</button>
+                </div>
+                <div class="row">
+                    <button onClick="clearDisplay()" class="clr">CLEAR</button>
+                </div>
             </div>
         </div>
     </div>
